--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "{name}",
+  "name": "{{name}}",
   "version": "1.0.0",
-  "description": "{description}",
-  "author": "{author}",
+  "description": "{{description}}",
+  "author": "{{author}}",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --config build/webpack.dev.conf.js",
